--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "core-js": "3.38.1",
     "fastest-levenshtein": "1.0.16",
     "form-urlencoded": "6.1.5",
+    "js-cookie": "^3.0.5",
     "prop-types": "15.8.1",
     "query-string": "7.1.3",
     "react": "^17.0.2",
