fixed lang dropdown issues

--- a/.env
+++ b/.env
@@ -41,3 +41,5 @@ BANNER_IMAGE_EXTRA_SMALL=''
 # ***** Miscellaneous *****
 APP_ID=''
 MFE_CONFIG_API_URL=''
+SITE_DOMAIN='subodha-azure-stage.manprax.in'
+
